--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
     "react-i18next": "^12.2.0",
+    "react-intersection-observer": "^9.15.1",
     "react-loading-overlay-ts": "^2.0.2",
     "react-number-format": "^5.2.2",
     "react-query": "^3.39.3",
