--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "react-slick": "^0.30.3",
     "react-smooth-collapse": "^2.1.2",
     "react-sortable-tree": "^2.8.0",
+    "react-swipeable-views": "^0.14.0",
     "react-to-print": "^2.14.13",
     "react-toastify": "^9.1.2",
     "react18-input-otp": "^1.1.4",
@@ -111,6 +112,7 @@
     "@types/react-dom": "^18.0.11",
     "@types/react-slick": "^0.23.13",
     "@types/react-sortable-tree": "^0.3.16",
+    "@types/react-swipeable-views": "^0.13.6",
     "@types/uuid": "^9.0.8",
     "autoprefixer": "^10.4.14",
     "eslint": "8.37.0",
@@ -119,7 +121,7 @@
     "eslint-plugin-storybook": "^0.6.6",
     "next": "^15.1.3",
     "postcss": "^8.4.21",
-    "react-quill": "^0.0.2",
+    "react-quill": "^2.0.0",
     "tailwindcss": "^3.3.1",
     "typescript": "^5.0.3"
   }
